Fixed Datatable Scrollbar

--- a/PyReceipts.css
+++ b/PyReceipts.css
@@ -1,3 +1,7 @@
 .hide {
     display: none;
 }
+#customtable {
+    height: auto;
+    width: auto;
+}
